# hfdl-recorder

./: .gitignore  CLAUDE.md  README.md  deploy.toml  pyproject.toml
clickhouse/schema/hfdl/: 000_create_database.sql  001_create_spots.sql
config/: help.toml  hfdl-recorder-config.toml.template
docs/: HFDL.md  REQUIREMENTS.md
scripts/: build-dumphfdl.sh  deploy.sh  install.sh
src/hfdl_recorder/: cli.py  config.py  configurator.py  contract.py  sigmond_tui.py
src/hfdl_recorder/core/: band_pipeline.py  ch_tailer.py  daemon.py
systemd/: hfdl-recorder@.service
tests/: test_band_pipeline.py  test_ch_tailer.py  test_config.py  test_configurator.py  test_contract.py  test_lifetime.py
tests/fixtures/: test-config.toml
