[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hfdl-recorder"
version = "0.1.0"
description = "HFDL (High Frequency Data Link) recorder for ka9q-radio, supervising one dumphfdl subprocess per band"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
dependencies = [
    "ka9q-python>=3.14.0",
    "numpy>=1.24.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
hfdl-recorder = "hfdl_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
# editable=true so a `git pull` of ka9q-python propagates to this consumer's
# venv without a reinstall.  Matches the suite-wide "one source tree, many
# editable consumers" convention; see sigmond/CLAUDE.md "Fleet upgrade pattern".
# Without this declaration, uv sync would resolve ka9q-python>=3.14.0 from
# PyPI and replace the existing editable install with a wheel.  The base
# "ka9q-python>=3.14.0" dependency above still controls what PyPI consumers get.
ka9q-python = { path = "../ka9q-python", editable = true }
